prediction-manager/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prediction-manager
  namespace: kubeflow
  labels:
    app: prediction-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prediction-manager
  template:
    metadata:
      labels:
        app: prediction-manager
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      serviceAccountName: prediction-manager
      containers:
        - name: prediction-manager
          image: localhost:5000/prediction-manager-app:20260518-datasets-external-entry
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          volumeMounts:
            - name: model-store
              mountPath: /models
            - name: dataset-store
              mountPath: /datasets
            - name: docker-sock
              mountPath: /var/run/docker.sock
      volumes:
        - name: model-store
          persistentVolumeClaim:
            claimName: prediction-manager-model-store
        - name: dataset-store
          persistentVolumeClaim:
            claimName: prediction-manager-dataset-store
        - name: docker-sock
          hostPath:
            path: /var/run/docker.sock
            type: Socket
