prediction-manager/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prediction-manager
  namespace: kubeflow
  labels:
    app: prediction-manager
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
  selector:
    app: prediction-manager
