prediction-manager/k8s/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prediction-manager
  namespace: kubeflow
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - prediction-manager
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - istio-system
        - podSelector: {}
